--- a/style_1503.html
+++ b/style_1503.html
@@ -1,22 +1,22 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 :root {
-    --cor-de-fundo: #311041;
-    --verde:#1df106;
-    --branco:#00fff2;
-    --botao-ativo:#530789;
-    --botao-inativo: rgb(39, 154, 152);
-    --texto-fundo: rgba(59, 114, 114, 0.899);
+    --cor-de-fundo: #000000;
+    --verde:#6FFF57;
+    --branco:#FFFFFF;
+    --botao-ativo:#3A375E;
+    --botao-inativo: rgba(58, 55, 94, 0,5);
+    --texto-fundo: rgba(58, 55, 94, 0,3);
 }
 body{
 
-    background-color: rgb(5, 104, 115);
+    background-color: rgb(158, 93, 182);
     font-family: 'lobster', sans-serif ;
 }
 
 h2 {
 
-    color: rgb(0, 233, 250);  
+    color: rgb(70, 1, 93);  
  }
 .conteudo-principal{
     display: flex;
@@ -42,7 +42,7 @@ h2 {
     display: flex;
     justify-content: center;
     padding: 1em;
-    font-size: 22px;
+    font-size: 18px;
     align-items: center;
     width: 100%;
 }
