--- a/index_2203.html
+++ b/index_2203.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <title>meus objetivos do ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,9 +14,8 @@
         <button class="botao">Cursos na Alura</button>
         <button class="botao">Criar projetos em JavaScript</button>
         <button class="botao">Criar um portfólio</button>
-        <button class="botao ativo">Atualizar meu currículo</button>
+        <button class="botao">Atualizar meu currículo</button>
         
     </div>
-    <script src="main.js"></script>
 </body>
 </html>
