--- a/style_0305.html
+++ b/style_0305.html
@@ -40,7 +40,7 @@ color: rgb(5, 13, 252);
 }
 
 .botao{
-    font-family: 'lobster',sans-serif;
+    font-family: "lobster",sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -65,7 +65,7 @@ color: rgb(5, 13, 252);
               border-radius: 40px 0 0 0;
     }
     .botao:last-child {
-               border-radius:0 40px 0 0;
+               border-radius: 40px 0 0;
     }
 .botao.ativo {
     background-color: var(--botao-ativo);
