--- a/style_0706.html
+++ b/style_0706.html
@@ -1,10 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 :root{ 
-    --cor-de-fundo: #dadce5;
+    --cor-de-fundo: #1327a9;
     --verde:#000000;
     --branco:#090c5e;
-    --botao-ativo:#636fcb;
+    --botao-ativo:#4454de;
     --botao-inativo: rgba(149, 149, 200, 0.5);
     --texto-fundo: rgba(8, 12, 243, 0.3);
 }
@@ -16,7 +16,7 @@ font-family: 'lobster', sans-serif;
 }
 
 h2 {
-color: rgb(28, 28, 103);
+color: rgb(7, 9, 87);
 }
 
 .conteudo-principal{
